fix lec6 notebooks

--- a/lecture/lec06/join_demo.ipynb
+++ b/lecture/lec06/join_demo.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we'll briefly review [joining tables as discussed in data 8](https://www.inferentialthinking.com/chapters/08/4/Joining_Tables_by_Columns.html).\n",
+    "In this notebook we'll briefly review [joining tables as discussed in Data 8](https://www.inferentialthinking.com/chapters/08/4/Joining_Tables_by_Columns.html).\n",
     "\n",
     "Often data is spread across two tables. Joining provides us with a way to naturally combine related tables."
    ]
@@ -88,7 +88,7 @@
    "source": [
     "To join tables `df` and `df2`, we call the function `df.merge(df2)`. Merge is just the word that the authors of pandas picked for joining tables. I don't know why.\n",
     "\n",
-    "Note: Unfortunately, Pandas also has a function called `df.join`. This is a limited version of `merge`. For ths sake of generality, we will only use `merge` in this class."
+    "Note: Unfortunately, Pandas also has a function called `df.join`. This is a limited version of `merge`. For the sake of generality, we will only use `merge` in this class."
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the caveats above in mind, tThis merged DataFrame is handy because we can use it to plot, e.g. the age of each president when they were elected."
+    "With the caveats above in mind, this merged DataFrame is handy because we can use it to plot, e.g. the age of each president when they were elected."
    ]
   },
   {
@@ -145,7 +145,7 @@
     "winners = joined.query(\"Result == 'win'\").copy()\n",
     "winners[\"Birthyear\"] = winners[\"Date of birth\"].str.split(',').str[1].map(int)\n",
     "winners[\"Age\"] = winners[\"Year\"] - winners[\"Birthyear\"]\n",
-    "sns.lmplot(data=winners, x=\"Year\", y=\"Age\")"
+    "sns.lmplot(data=winners, x=\"Year\", y=\"Age\");"
    ]
   },
   {
@@ -212,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "elections.merge(presidents, \n",
@@ -261,5 +259,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
