[Lab 12] Public Release (Fix)

--- a/lab/lab12/lab12.ipynb
+++ b/lab/lab12/lab12.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Lab 12: Principal Component Analysis\n",
     "\n",
-    "In this lab assignment, we will walk through an example of using Principal Component Analysis (PCA) on a dataset involving [iris plants](https://en.wikipedia.org/wiki/Iris_(plant)).\n",
+    "In this lab assignment, we will walk through an example of using Principal Component Analysis (PCA) on a dataset involving [iris plants](https://en.wikipedia.org/wiki/Iris_plant).\n",
     "\n",
     "\n",
     "### Due Date\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
    "source": [
     "## Question 1\n",
     "\n",
-    "Let's explore the data by creating a scatter matrix of our iris features. To do this, we'll create 2D scatter plots for every possible pair of our four features. This should result in six total scatter plots in our scatter matrix with the classes labeled in each.\n",
+    "Let's explore the data by creating a scatter matrix of our iris features. To do this, we'll create 2D scatter plots for every possible pair of our four features. This should result in six total scatter plots in our scatter matrix with the classes labeled in distinct colors for each plot.\n",
     "\n",
     "Complete the code below using `sns.scatterplot` to create the scatter matrix.\n",
     "\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,13 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "iris_mean = ...\n",
     "features = ...\n",
-    "iris_mean"
+    "print(iris_mean)"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "source": [
     "## Question 2b\n",
     "\n",
-    "As you may recall from lecture, PCA is a specific application of the singular value decomposition (SVD) for matrices. In the following cell, let's use the [`np.linalg.svd`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.svd.html) function to compute the SVD of our `features`. Store the left singular vectors, singular values, and right singular vectors in `u`, `s`, and `vt`, respectively. Set the `full_matrices` argument of `np.linalg.svd` to `False`.\n",
+    "As you may recall from lecture, PCA is a specific application of the singular value decomposition (SVD) for matrices. In the following cell, let's use the [`np.linalg.svd`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.svd.html) function to compute the SVD of our `features`. Store the left singular vectors, singular values, and right singular vectors in `u`, `s`, and `vt`, respectively. Note that `vt` corresponds to $V^T$. Set the `full_matrices` argument of `np.linalg.svd` to `False`.\n",
     "\n",
     "<!--\n",
     "BEGIN QUESTION\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,9 +230,11 @@
    "source": [
     "## Question 2c\n",
     "\n",
-    "What can we learn from the singular values in `s`? First, we can compute the total variance of the data by summing the squared singular values. We will later be able to use this value to determine the variance captured by a subset of our principal components.\n",
+    "What can we learn from the singular values in `s`? Formally, we can measure the amount of variance captured by the i'th principal component as:\n",
     "\n",
-    "Compute the total variance below by summing the squares of each singular value in `s` and store the result in the variable `total_variance`.\n",
+    "$\\sigma_i^2/N$, where $\\sigma_i$ is the singular value of the i'th principal component and $N$ is the total number of data points.\n",
+    "\n",
+    "Compute the total variance of our data below by summing the square of each singular value in `s` and dividing the result by the total number of data points. Store the result in the variable `total_variance`.\n",
     "\n",
     "<!--\n",
     "BEGIN QUESTION\n",
@@ -242,9 +244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +373,7 @@
    "source": [
     "## Question 3c\n",
     "\n",
-    "What proportion of the total variance is accounted for when we project the iris data down to two dimensions? Compute this quantity in the cell below by dividing the sum of the first two squared singular values (also known as component scores) in `s` by the `total_variance` you calculated previously. Store the result in `two_dim_variance`.\n",
+    "What proportion of the total variance is accounted for when we project the iris data down to two dimensions? Compute this quantity in the cell below by dividing the variance captured by the first two singular values (also known as component scores) in `s` by the `total_variance` you calculated previously. Store the result in `two_dim_variance`.\n",
     "\n",
     "<!--\n",
     "BEGIN QUESTION\n",
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +419,9 @@
    "source": [
     "## Question 4\n",
     "\n",
-    "As a last step, we will create a [scree plot](https://en.wikipedia.org/wiki/Scree_plot) to visualize the weight of each principal component. In the cell below, create a scree plot by creating a line plot of the squares of the singular values in `s` vs. the principal component number (1st, 2nd, 3rd, or 4th). Your graph should match the image below:\n",
+    "As a last step, we will create a [scree plot](https://en.wikipedia.org/wiki/Scree_plot) to visualize the weight of each principal component. In the cell below, create a scree plot by creating a line plot of the component scores (variance captured by each principal component) vs. the principal component number (1st, 2nd, 3rd, or 4th). Your graph should match the image below:\n",
+    "\n",
+    "***Hint***: You may find `plt.xticks()` helpful when formatting your plot axes.\n",
     "\n",
     "<img src=\"scree.png\" width=\"400px\" />\n",
     "\n",
@@ -429,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,6 +966,18 @@
    {
     "id": "5df7fee31ac741048f80af151685191a",
     "time": "2020-11-17T08:10:15.679Z",
+    "type": "completion"
+   },
+   {
+    "code": "from sklearn.datasets import load_iris\nimport pandas as pd\nimport numpy as np\nimport seaborn as sns\nimport matplotlib.pyplot as plt\n%matplotlib inline",
+    "id": "7d3da591e4c94a2b8807d72d980732bf",
+    "idx": 3,
+    "time": "2020-11-17T08:15:59.125Z",
+    "type": "execution"
+   },
+   {
+    "id": "7d3da591e4c94a2b8807d72d980732bf",
+    "time": "2020-11-17T08:15:59.196Z",
     "type": "completion"
    }
   ],
